fix span wrap on android chrome

--- a/src/components/css/resume.scss
+++ b/src/components/css/resume.scss
@@ -73,6 +73,7 @@
 .hero .input-container {
   display:flex;
   position: relative;
+  white-space: nowrap;
   width:100%;
 }
 
